k8s/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.yadon3141.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: longhorn-backend
            port:
              number: 9500
